# bachelor-thesis

./: .gitignore  LICENSE  README.md  c-notes.adoc  c-notes.md  garmin_data_for_tableau.csv  main.py  pyproject.toml  sleep-test-garmin.ipynb  test-garminconnect-lib.ipynb  test.ipynb
data/: 20260105_8278074507_MiFitness_hlth_center_aggregated_fitness_data.csv  20260105_8278074507_MiFitness_hlth_center_data_source.csv  20260105_8278074507_MiFitness_hlth_center_sport_record.csv  20260105_8278074507_MiFitness_hlth_center_sport_track_data.csv  20260105_8278074507_MiFitness_user_device_setting.csv  20260105_8278074507_MiFitness_user_fitness_data_records.csv  20260105_8278074507_MiFitness_user_fitness_profile.csv  20260105_8278074507_MiFitness_user_fitness_with_uuid_data_records.csv  20260105_8278074507_MiFitness_user_health_plan_records.csv  20260105_8278074507_MiFitness_user_member_profile.csv  20260105_8278074507_MiFitness_user_pk_invite_record.csv  20260105_8278074507_MiFitness_user_pk_record.csv  20260105_8278074507_MiFitness_user_pk_result_statistics.csv  Sleep-2026-03-01.csv  Sleep-2026-03-02.csv  Sleep-2026-03-03.csv  Sleep-2026-03-04.csv  Sleep-2026-03-05.csv  Sleep-2026-03-06.csv
heat_map/: test-heat-map.ipynb
regression/: test-regression.ipynb
server/: garmin_export.csv  garmin_live.db  ingestor.py  main.py  server.py
test-notebooks/: sleep-test-garmin.ipynb  test-compare-miband-garmin-data.ipynb  test-garminconnect-lib.ipynb  test-garminconnect-with-docs.ipynb  test-master-df.ipynb  test-miband-hr.ipynb  test-miband-sleep.ipynb  test-miband-spo2.ipynb  (+5 more)
(+2 files in other folders)
